--- a/ex-03-04/ex2.html
+++ b/ex-03-04/ex2.html
@@ -55,7 +55,7 @@
 					<tr style="background-color: #ccc">
 						<th style="width: 40%">Nome</th>
 						<th style="width: 10%">Idade</th>
-						<th style="width: 20">Função</th>
+						<th style="width: 20%">Função</th>
 						<th style="width: 15%">Telefone</th>
 						<th style="width: 15%">Ações</th>
 					</tr>
