--- a/aula-10-04/eventos/doubleclick.html
+++ b/aula-10-04/eventos/doubleclick.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Double Click</title>
 </head>
 <body>
     <h1 id="ponto" ondblclick="Trocar()">Se eu clicar aqui 2 vezes aqui o que vai aparecer?</h1>
