--- a/aula-10-04/eventos/onchange.html
+++ b/aula-10-04/eventos/onchange.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>On change</title>
     <script>
         function FunCH(){
             var x = document.getElementById("fcid");
