--- a/aula-17-04/index.html
+++ b/aula-17-04/index.html
@@ -21,7 +21,7 @@
     <section id="intro">
         <header>
             <h2>Você já visitou o Rio de Janeiro?</h2>
-            <p>O Rio de Janeiro= é a segunda maior metrópole do Brasil, situada no Sudeste dopaís.  Cidade  brasileira  mais  conhecida  no  exterior,  maior  rota  do  turismointernacional no Brasil e principal destino turístico na América Latina e em todoHemisfério Sul, a capital fluminense funciona como  um  "espelho",  ou  "retrato"nacional,  seja  positiva  ou  negativamente.  Atualmente,  o  Rio  de  Janeiro  é  asegunda maior cidade do país, depois de São Paulo. É também conhecida porCidade Maravilhosa, e aquele que nela nasce é chamado de carioca. Em 2012, apaisagem urbana da cidade foi considerada Patrimônio Cultural da Humanidadepela UNESCO.
+            <p>O Rio de Janeiro é a segunda maior metrópole do Brasil, situada no Sudeste dopaís.  Cidade  brasileira  mais  conhecida  no  exterior,  maior  rota  do  turismointernacional no Brasil e principal destino turístico na América Latina e em todoHemisfério Sul, a capital fluminense funciona como  um  "espelho",  ou  "retrato"nacional,  seja  positiva  ou  negativamente.  Atualmente,  o  Rio  de  Janeiro  é  asegunda maior cidade do país, depois de São Paulo. É também conhecida porCidade Maravilhosa, e aquele que nela nasce é chamado de carioca. Em 2012, apaisagem urbana da cidade foi considerada Patrimônio Cultural da Humanidadepela UNESCO.
             </p>
             <img src="cm01.jpg">
         </header>
