--- a/aula-05-22/index.html
+++ b/aula-05-22/index.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CLUBE DO VINIL</title>
+    <style type="text/css">
 
+        body, html{
+            margin: 0;
+            padding: 0;
+        }
+
+        .main{
+            max-width: 1200x;
+            margin: 0 auto;
+            overflow: hidden;
+            background: lightgrey;
+        }
+
+        .content{
+            float: left;
+            width: 100%;
+            margin-right: -210px;
+        }
+
+        .content-inner{
+            margin-right: 210px;
+        }
+
+        .sidebar{
+            background: #236B8E;
+            float: right;
+            width: 200px;
+        }
+
+        .menu{
+            width: 100%;
+            background: #666666;
+        }
+
+        .menu ul{
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu ul li{
+            display: inline-block;
+            zoom: 1;
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu ul li a{
+            display: block;
+            padding: 10px;
+            color: #FFF;
+        }
+
+        .footer{
+            width: 100%;
+            background: #333000;
+            text-align: center;
+        }
+
+        @media screen and (max-width: 700px) {
+            .sidebar, .content-inner, .content{
+                float: none;
+                width: 100%;
+                margin-right: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="main">
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">SEJA SÓCIO</a></li>
+                <li> <a href="index.html">LANÇAMENTOS</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="content-inner">
+                <p style="text-align: center; font-size: 15px; color: #5C3317;">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur adipisci rem placeat maiores, voluptatum fugiat, tempore, quos consectetur numquam consequuntur modi laudantium
+                
+                    <img src="vinil.jpg" height="194" width="367"> <br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus est excepturi quos vitae nemo minus. Totam commodi, molestias beatae, sequi quas ratione possimus quisquam iste, veritatis cum explicabo quae nesciunt. <br><br>
+                </p>
+            </div>
+        </div>
+        <div class="sidebar">
+            <font color="#FFFFFF">ESTILOS MUSICAIS: <br><br>
+                Dance <br>
+                Jazz <br>
+                Pagode <br>
+                Funk <br>
+                Eletrônica <br>
+                Gospel <br>
+                Rock <br>
+                Heavy Metal <br>
+                Black <br>
+                Rap <br>
+                Hip hop <br>
+                Pop <br>
+                Samba <br>
+                Blues <br>
+                Sertanejo <br>
+                Soul <br>
+                Outros estilos <br><br>
+            </font>
+        </div>
+
+        <br style="clear: both;">  <!--Isso impede da arte de cima não interferir no rodapé-->  
+
+        <div class="footer">
+            <font color="FFFFFF">Desenvolvido pelo CLUBE DO VINIL</font>
+        </div>
+    </div>
+</body>
+</html>
