--- a/aula-05-22/mediaquery.html
+++ b/aula-05-22/mediaquery.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Resopnsivo com CSS3</title>
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:0px)" href="/static/small.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:700px)" href="/static/medium.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:1150px)" href="/static/large.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width:0px)" href="small.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width:700px)" href="medium.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width:1150px)" href="large.css">
 </head>
 <body>
     <div class="uma-div"></div>
